working-assets/css/global.css
/* ... */
.loader:before {
    animation-delay: 0s;
    left: auto;
    right: calc(var(--height)/2)
}

.grid-loader {
    grid-area: 1 / 1;
    opacity: 0.8;
    transition: opacity 0.15s ease;
}

.inverted {
    filter: invert(1)
}

@keyframes loadfade {
    0% {
        background-color: var(--c-black);
        box-shadow: inset 0 0 2px 0 var(--c-black), 0 0 5px 0 #ccc
    }

    66% {
        background-color: var(--c-off-white);
        box-shadow: inset 0 0 2px 0 grey
    }

    to {
        background-color: #fff;
        box-shadow: inset 0 0 2px 0 grey
    }
}

button {
    margin: 0;
    margin: 0;
    background: none;
    border: none;
    cursor: pointer;
}


.buttons-group {
    display: flex;
    gap: 1em;
    flex-wrap: wrap;
    margin-bottom: 2.5rem;
}

.button {
    text-transform: uppercase;
    text-decoration: none !important;
    text-box-trim: trim-both;
        text-box-edge: cap alphabetic;
    letter-spacing: var(--letter-spacing);
    padding: 0.75rem 1.5rem;
    display: inline-flex;
    text-align: center;
    align-items: center;
    gap: 0.15rem;
    justify-content: center;
    width: max-content;
    scale: 1;
    transition: scale 0.15s var(--bezier), color 0.15s var(--bezier);
    border-radius: var(--radius);
    isolation: isolate;

    & span {
            text-box-edge: cap alphabetic;
            letter-spacing: var(--letter-spacing);
        }
    &:not(:disabled):hover {
            scale: 1.02;
        }

                &:not(:disabled):active {
        scale: 0.95;
    }
}

.button-full {
    width: min(100%, 500px);
}

.button-primary,
.button-secondary,
.button-inverted {
    --btn-color: var(--c-white);
    --btn-bg: var(--c-black);
    background-color: var(--btn-bg);
    color: var(--btn-color);
    border: 1px solid var(--btn-bg);
    cursor: pointer;
    position: relative;
    overflow: hidden;
    font-weight: 700;

    &::after {
        background-color: color-mix(in lab, var(--btn-bg), white 20%);
        background-color: oklch(from var(--btn-bg) calc(l + 1.2) c h / 0.1);
        content: "";
        width: calc(100% + 2px);
        height: 100%;
        position: absolute;
        top: 100%;
        left: -1px;
        z-index: -1;
        transition: top .1s ease-out;
    }

        &:not(:disabled):hover {
        &::after {
            top: 0;
        }
        }
}

.button-primary:hover {
    color: var(--c-white);
    color: oklch(from var(--btn-color) l c h / 0.9);
}
.button-secondary {
    --btn-color: var(--c-black);
    --btn-bg: transparent;
    background-color: var(--btn-bg);
    color: var(--c-black);
    border: 1px solid var(--c-black);

    &:hover {
        color: var(--c-black);
    }

    &::after {
        background-color: var(--btn-color);
        opacity: 0.1;
    }
}

.button-inverted {
    color: var(--c-black);
    border: none;
background-color: var(--c-white);
    &:hover {
        color: var(--c-black);
    }

    &::after {
        background-color: var(--c-light-grey);
    }
}

.BIS_trigger {
    font-size: calc(var(--txt-sm) * 0.9);
    margin: 15px auto 0;
    max-width: 90%;
    padding: 5px 10px;

}

.round-btn {
    border-radius: 15px;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: grid;
    place-items: center;
    backdrop-filter: blur(3px);
    background: color-mix(in lab, var(--c-white), transparent 70%);
    box-shadow: 0 0 4px var(--c-shadow);
    cursor: pointer;
    scale: 1;
        transition: scale 0.15s var(--bezier);

    & svg {
        /* overwriting 3rd party css */
        width: 15px;
        height: 15px;
        margin-top: 0;
    }

                                &:not(:disabled):hover {
            scale: 1.1;
        }
}

.iWishAdd svg {
    width: 15px !important;
    height: 15px !important;
}

.iWishAdd span {
    display: none;
}

/* GLOBAL DESKTOP  */

@media screen and (width > 768px) {
    .mob-only {
        display: none !important;
        visibility: hidden !important;
    }

    .mob-hide {
        display: inherit;
        visibility: visible;
    }

}

.img-overlay {
    position: relative;
    width: 100%;
    height: 100%;
    display: block;
    overflow: hidden;
    border-radius: var(--radius);

    & img,
    & a {
        inset: 0;
    }

    & img {
        display: block;
        object-position: center;
        scale: 1;
        transition: scale 10s linear;
        width: 100%;
        height: 100%;

        &:nth-child(n + 2) {
            position: absolute;
        }
    }

    & a {
        display: grid;
        position: absolute;
        align-content: center;
        text-align: center;
        font-family: var(--emphasis-heading-font-family);
        font-size: var(--txt-h1);
        text-transform: uppercase;
        color: var(--c-white);
        text-shadow: 0 0 .75em #4d4d4d;
            --webkit-text-stroke: 1px var(--c-light-grey);
            transition: font-size 0.2s var(--bezier), text-shadow 0.2s var(--bezier);
    }

    &:hover {
        & img {
            scale: 1.2;
            filter: brightness(1.1);
        }

        & a {
            font-size: calc(var(--txt-h1) * 1.1);
            text-shadow: 0 0 1em var(--c-dark-grey);

        }
    }
}

/* SEARCH  */

input {
    color: var(--c-black);
    &:focus {
        outline: 1px solid var(--c-black);
            ;
    }

    &::-webkit-search-cancel-button {
        display: none;
    }
}

predictive-search {
    display: flex;
    flex-direction: column;
    width: 100%;
    position: absolute;
    min-height: 50px;
    max-height: calc(95dvh - 50px);
    overflow: hidden;
    top: -1px;
    opacity: 0;
    visibility: hidden;
    background-color: var(--c-white);
    z-index: -1;
    transition: top .2s var(--bezier), opacity .2s ease;

    &[aria-hidden="false"] {
        opacity: 1;
        top: 50px;
    }

    &:focus {
        outline: none;
    }
}
/* ... */

